fix extra space cause of using aos

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -810,10 +810,6 @@ select {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
 }
-.my-10 {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
-}
 .-mr-96 {
   margin-right: -24rem;
 }
@@ -925,9 +921,6 @@ select {
 .aspect-\[1155\/678\] {
   aspect-ratio: 1155/678;
 }
-.aspect-\[14\/13\] {
-  aspect-ratio: 14/13;
-}
 .aspect-\[16\/9\] {
   aspect-ratio: 16/9;
 }
@@ -976,8 +969,8 @@ select {
 .min-h-screen {
   min-height: 100vh;
 }
-.w-10 {
-  width: 2.5rem;
+.w-0 {
+  width: 0px;
 }
 .w-16 {
   width: 4rem;
@@ -1009,9 +1002,6 @@ select {
 .w-full {
   width: 100%;
 }
-.w-0 {
-  width: 0px;
-}
 .max-w-2xl {
   max-width: 42rem;
 }
@@ -1036,11 +1026,11 @@ select {
 .max-w-xl {
   max-width: 36rem;
 }
-.flex-none {
-  flex: none;
-}
 .flex-1 {
   flex: 1 1 0%;
+}
+.flex-none {
+  flex: none;
 }
 .grow {
   flex-grow: 1;
@@ -1119,9 +1109,6 @@ select {
 .gap-y-12 {
   row-gap: 3rem;
 }
-.gap-y-14 {
-  row-gap: 3.5rem;
-}
 .gap-y-20 {
   row-gap: 5rem;
 }
@@ -1163,11 +1150,17 @@ select {
 .overflow-visible {
   overflow: visible;
 }
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
 .rounded {
   border-radius: 0.25rem;
 }
 .rounded-2xl {
   border-radius: 1rem;
+}
+.rounded-3xl {
+  border-radius: 1.5rem;
 }
 .rounded-full {
   border-radius: 9999px;
@@ -1177,9 +1170,6 @@ select {
 }
 .rounded-md {
   border-radius: 0.375rem;
-}
-.rounded-3xl {
-  border-radius: 1.5rem;
 }
 .border {
   border-width: 1px;
@@ -1235,13 +1225,13 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
+.bg-gray-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+}
 .bg-gray-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-.bg-gray-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 .bg-indigo-500 {
   --tw-bg-opacity: 1;
@@ -1268,10 +1258,6 @@ select {
 }
 .bg-white\/5 {
   background-color: rgb(255 255 255 / 0.05);
-}
-.bg-gray-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
@@ -1357,6 +1343,10 @@ select {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
 .px-9 {
   padding-left: 2.25rem;
   padding-right: 2.25rem;
@@ -1409,13 +1399,12 @@ select {
   padding-top: 21px;
   padding-bottom: 21px;
 }
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
-.py-20 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+.pb-10 {
+  padding-bottom: 2.5rem;
 }
 .pb-14 {
   padding-bottom: 3.5rem;
@@ -1455,15 +1444,6 @@ select {
 }
 .pt-8 {
   padding-top: 2rem;
-}
-.pt-6 {
-  padding-top: 1.5rem;
-}
-.pb-5 {
-  padding-bottom: 1.25rem;
-}
-.pb-10 {
-  padding-bottom: 2.5rem;
 }
 .text-center {
   text-align: center;
@@ -1524,11 +1504,11 @@ select {
 .leading-8 {
   line-height: 2rem;
 }
-.leading-relaxed {
-  line-height: 1.625;
-}
 .leading-9 {
   line-height: 2.25rem;
+}
+.leading-relaxed {
+  line-height: 1.625;
 }
 .tracking-tight {
   letter-spacing: -0.025em;
@@ -2108,10 +2088,6 @@ body {
     margin-top: 7rem;
   }
 
-  .lg\:mt-5 {
-    margin-top: 1.25rem;
-  }
-
   .lg\:block {
     display: block;
   }
@@ -2185,6 +2161,11 @@ body {
     background-color: transparent;
   }
 
+  .lg\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
   .lg\:px-36 {
     padding-left: 9rem;
     padding-right: 9rem;
@@ -2215,38 +2196,8 @@ body {
     padding-bottom: 12rem;
   }
 
-  .lg\:px-40 {
-    padding-left: 10rem;
-    padding-right: 10rem;
-  }
-
-  .lg\:px-20 {
-    padding-left: 5rem;
-    padding-right: 5rem;
-  }
-
   .lg\:pt-0 {
     padding-top: 0px;
-  }
-
-  .lg\:pt-5 {
-    padding-top: 1.25rem;
-  }
-
-  .lg\:pt-8 {
-    padding-top: 2rem;
-  }
-
-  .lg\:pt-10 {
-    padding-top: 2.5rem;
-  }
-
-  .lg\:pt-32 {
-    padding-top: 8rem;
-  }
-
-  .lg\:pt-36 {
-    padding-top: 9rem;
   }
 
   .lg\:shadow-none {
@@ -2311,10 +2262,6 @@ body {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
-  .xl\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
   .xl\:grid-rows-1 {
     grid-template-rows: repeat(1, minmax(0, 1fr));
   }
@@ -2326,15 +2273,6 @@ body {
   .xl\:gap-x-8 {
     -moz-column-gap: 2rem;
          column-gap: 2rem;
-  }
-
-  .xl\:rounded-3xl {
-    border-radius: 1.5rem;
-  }
-
-  .xl\:px-8 {
-    padding-left: 2rem;
-    padding-right: 2rem;
   }
 
   .xl\:px-24 {
